Enabled the delete and clear buttons, also fixed numbers overflowing the screen display. Need to fix the calculations as I am not getting stuff right when running them, and that should do it.

--- a/styles.css
+++ b/styles.css
@@ -10,21 +10,18 @@ body{
 .screen{
     background-color: lightgray;
     border: 2px solid black;
-    height: 100px;
-    margin: 5px;
     text-align: right;
+    margin: 15px;
+    min-height: 60px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 .total{
-    padding-top: 25px;
+    padding-top: 5px;
     font-size: 40px;
+    
 }
 
-.operations{
-    font-size: 25px;
-}
-.total, .operations{
-    margin-right: 5px;
-}
 .calculator{
     border: 2px solid black;
     width: 400px;
@@ -41,7 +38,7 @@ body{
 }
 
 .first-row > button{
-    width: 150px;
+    width: 175px;
     height: 50px;
     font-size: 20px;
 }
